add main content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Homework</title>
 </head>
 <body>
+    <header class="header">
+        <div class="container header__container">
+            <a href="" class="logo">
+                <img src="images/logo (2).png" alt="logo" srcset="" class="logo__image">
+            </a>
+            <nav class="navigation">
+                <ul class="navigation__links">
+                    <li class="navigation__list-item"><a href="#" class="link">Home</a></li>
+                    <li class="navigation__list-item"><a href="#" class="link">Services</a></li>
+                    <li class="navigation__list-item"><a href="#" class="link">About</a></li>
+                    <li class="navigation__list-item"><a href="#" class="link">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="callback-button">Callback</button>
+        </div>
+    </header>
+    <main class="main">
+        <section class="hero container">
+            <h1 class="hero__heading">Who we are</h1>
+            <div class="divider"></div>
+            <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+        <section class="card__section container">
+            <div class="team-list card__section-item">
+                <img src="images/photo.png" alt="" class="team-list__image">
+                <h4 class="team-list__heading">John Handson</h4>
+                <p class="team-list__text">Lead designer</p>
+            </div>
+            <div class="team-list card__section-item">
+                <img src="images/photo.png" alt="" class="team-list__image">
+                <h4 class="team-list__heading">Alex Cutter</h4>
+                <p class="team-list__text">Developer</p>
+            </div>
+            <div class="team-list card__section-item">
+                <img src="images/photo (1).png" alt="" class="team-list__image">
+                <h4 class="team-list__heading">Elena Simpson</h4>
+                <p class="team-list__text">Artist</p>
+            </div>
+            <div class="team-list card__section-item">
+                <img src="images/photo (2).png" alt="" class="team-list__image">
+                <h4 class="team-list__heading">Lily Allen</h4>
+                <p class="team-list__text">Graphic Designer</p>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <a href="" class="footer-logo">
+                <img src="images/logo (2).png" alt="logo" class="logo__image">
+            </a>
+            <nav class="footer-navigation">
+                <ul class="footer-navigation__links">
+                    <li class="footer-navigation navigation__list-item"><a href="">Home</a></li>
+                    <li class="footer-navigation navigation__list-item"><a href="">Services</a></li>
+                    <li class="footer-navigation navigation__list-item"><a href="">About</a></li>
+                    <li class="footer-navigation navigation__list-item"><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="social-media-links">
+                <a href="#" class="social-media-links__item"><img src="icons/twitter.png" alt="twitter"></a>
+                <a href="#" class="social-media-links__item"><img src="icons/facebook.png" alt="facebook"></a>
+                <a href="#" class="social-media-links__item"><img src="icons/instagram.png" alt="inst"></a>
+                <a href="#" class="social-media-links__item"><img src="icons/linkedin.png" alt="linkedin"></a>
+                <a href="#" class="social-media-links__item"><img src="icons/telegram.png" alt="telegram"></a>
+            </div>
+         </div>
+    </footer>
     
 </body>
 </html>
