add changes to css and html

--- a/index.html
+++ b/index.html
@@ -32,27 +32,49 @@
             <div class="divider"></div>
             <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
         </section>
-        <section class="card__section container">
-            <div class="team-list card__section-item">
-                <img src="images/photo.png" alt="" class="team-list__image">
-                <h4 class="team-list__heading">John Handson</h4>
-                <p class="team-list__text">Lead designer</p>
-            </div>
-            <div class="team-list card__section-item">
-                <img src="images/photo.png" alt="" class="team-list__image">
-                <h4 class="team-list__heading">Alex Cutter</h4>
-                <p class="team-list__text">Developer</p>
-            </div>
-            <div class="team-list card__section-item">
-                <img src="images/photo (1).png" alt="" class="team-list__image">
-                <h4 class="team-list__heading">Elena Simpson</h4>
-                <p class="team-list__text">Artist</p>
-            </div>
-            <div class="team-list card__section-item">
-                <img src="images/photo (2).png" alt="" class="team-list__image">
-                <h4 class="team-list__heading">Lily Allen</h4>
-                <p class="team-list__text">Graphic Designer</p>
-            </div>
+        <section class="card-section container">
+            <ul class="team-list">
+                <li class="card-section__item container-overlay">
+                    <img src="images/photo.png" alt="" class="team-list__image">
+                    <h4 class="team-list__heading">John Handson</h4>
+                    <p class="team-list__text">Lead designer</p>
+                    <div class="overlay">
+                        <a href=""><img src="icons/twitter (2).png" alt="link" class="overlay-icon-3"></a>
+                        <a href=""><img src="icons/facebook (2).png" alt="link" class="overlay-icon-2"></a>
+                        <a href=""><img src="icons/instagram (2).png" alt="link" class="overlay-icon-1"></a>
+                    </div>
+                </li>
+                <li class="card-section__item container-overlay">
+                    <img src="images/photo.png" alt="" class="team-list__image">
+                    <h2 class="team-list__heading">Alex Cutter</h2>
+                    <p class="team-list__text">Developer</p>
+                    <div class="overlay">
+                        <a href=""><img src="icons/twitter (2).png" alt="link" class="overlay-icon-3"></a>
+                        <a href=""><img src="icons/facebook (2).png" alt="link" class="overlay-icon-2"></a>
+                        <a href=""><img src="icons/instagram (2).png" alt="link" class="overlay-icon-1"></a>
+                    </div>
+                </li>
+                <li class="card-section__item container-overlay">
+                    <img src="images/photo (1).png" alt="" class="team-list__image">
+                    <h2 class="team-list__heading">Elena Simpson</h2>
+                    <p class="team-list__text">Artist</p>
+                    <div class="overlay">
+                        <a href=""><img src="icons/twitter (2).png" alt="link" class="overlay-icon-3"></a>
+                        <a href=""><img src="icons/facebook (2).png" alt="link" class="overlay-icon-2"></a>
+                        <a href=""><img src="icons/instagram (2).png" alt="link" class="overlay-icon-1"></a>
+                    </div>
+                </li>
+                <li class="card-section__item container-overlay">
+                    <img src="images/photo (2).png" alt="" class="team-list__image">
+                    <h2 class="team-list__heading">Lily Allen</h2>
+                    <p class="team-list__text">Graphic Designer</p>
+                    <div class="overlay">
+                       <a href=""><img src="icons/twitter (2).png" alt="link" class="overlay-icon-3"></a>
+                       <a href=""><img src="icons/facebook (2).png" alt="link" class="overlay-icon-2"></a>
+                       <a href=""><img src="icons/instagram (2).png" alt="link" class="overlay-icon-1"></a>
+                    </div>
+                </li>
+            </ul>
         </section>
     </main>
     <footer class="footer">
@@ -68,15 +90,39 @@
                     <li class="footer-navigation navigation__list-item"><a href="">Contact</a></li>
                 </ul>
             </nav>
-            <div class="social-media-links">
-                <a href="#" class="social-media-links__item"><img src="icons/twitter.png" alt="twitter"></a>
-                <a href="#" class="social-media-links__item"><img src="icons/facebook.png" alt="facebook"></a>
-                <a href="#" class="social-media-links__item"><img src="icons/instagram.png" alt="inst"></a>
-                <a href="#" class="social-media-links__item"><img src="icons/linkedin.png" alt="linkedin"></a>
-                <a href="#" class="social-media-links__item"><img src="icons/telegram.png" alt="telegram"></a>
-            </div>
+            <ul class="social-media-links">
+                <li class="container-overlay-footer">
+                    <a href="#" class="social-media-links__item"><img src="icons/twitter.png" alt="twitter"></a>
+                    <div class="overlay-footer">
+                        <a href=""><img src="icons/twitter (2).png" alt="link" class="overlay-link--1"></a>
+                    </div>
+                </li>
+                <li class="container-overlay-footer">
+                    <a href="#" class="social-media-links__item"><img src="icons/facebook.png" alt="facebook"></a>
+                    <div class="overlay-footer">      
+                        <a href=""><img src="icons/facebook (2).png" alt="link" class="overlay-link--2"></a>
+                    </div>
+                </li>
+                <li class="container-overlay-footer">
+                    <a href="#" class="social-media-links__item"><img src="icons/instagram.png" alt="inst"></a>
+                    <div class="overlay-footer">
+                        <a href=""><img src="icons/instagram (2).png" alt="link" class="overlay-icon--3"></a>
+                    </div>
+                </li>
+                <li class="container-overlay-footer">
+                    <a href="#" class="social-media-links__item"><img src="icons/linkedin.png" alt="linkedin"></a>
+                    <div class="overlay-footer">
+                        <a href=""><img src="icons/linkedin (2).png" alt="link" class="overlay-icon--4"></a>
+                    </div>
+                </li>
+                <li class="container-overlay-footer">
+                    <a href="#" class="social-media-links__item"><img src="icons/telegram.png" alt="telegram"></a>
+                    <div class="overlay-footer">
+                        <a href=""><img src="icons/telegram (2).png" alt="link" class="overlay-icon--5"></a>
+                    </div>
+                </li>
+            </ul>
          </div>
-    </footer>
-    
+    </footer> 
 </body>
 </html>
